# vital-care-ai

./: .gitignore  DESIGN.MD  README.md  WELLBEING_AGENT_SKILL.md  index.html  main.py  prompt.md  pyproject.toml
vital-care-backend/: .env.example  .gitignore  README.md  requirements.txt
vital-care-backend/app/: config.py  main.py
vital-care-backend/app/agents/: diagnosis_agent.py  wellbeing_agent.py
vital-care-backend/app/data/: trusted_sources_seed.json
vital-care-backend/app/models/: __init__.py  chat.py  database.py  doctor_visit.py  document.py  user.py  wellbeing.py
vital-care-backend/app/prompts/: care_locator_prompt.py  diagnosis_system_prompt.py  doctor_visit_prompt.py  medical_document_prompt.py  medical_jargon_prompt.py  possible_causes_prompt.py  provider_type_prompt.py  safety_prompt.py  symptom_consultation_prompt.py  temporary_mitigation_prompt.py  urgency_prompt.py  wellbeing_system_prompt.py
vital-care-backend/app/safety/: medical_safety_guardrails.py
vital-care-backend/app/schemas/: chat.py  common.py  doctor_visit.py  document.py  urgency.py  wellbeing.py
vital-care-backend/app/services/: doctor_document_generator.py  document_parser.py  llm_service.py  location_service.py  pdf_generator.py  rag_service.py
vital-care-backend/app/skills/: care_locator_skill.py  doctor_visit_prep_skill.py  medical_document_skill.py  medical_jargon_skill.py  possible_causes_skill.py  provider_type_skill.py  symptom_consultation_skill.py  temporary_mitigation_skill.py  urgency_classification_skill.py
vital-care-backend/templates/: index.html
(+12 files in other folders)
