[project]
name = "vital-care"
version = "0.1.0"
description = "Vital AI — Agentic AI healthcare navigation assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy==2.0.35",
    "alembic==1.13.3",
    "python-dotenv==1.0.1",
    "openai==1.51.2",
    "python-multipart==0.0.12",
    "pypdf==5.0.1",
    "pdfplumber==0.11.4",
    "pytesseract==0.3.13",
    "pillow==10.4.0",
    "chromadb==0.5.15",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "aiofiles==24.1.0",
    "fpdf2==2.8.1",
    "jinja2==3.1.4",
]

[project.scripts]
vital-ai = "main:main"

[tool.uv]
package = false
